--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "swiftmailer/swiftmailer": "^6.2",
         "imagine/imagine": "^1.2",
-        "ext-gd": "*"
+        "ext-gd": "*",
+        "ext-mysqli": "*"
     }
 }
